# time_tracker

./: .env.example  .gitignore  README.md  bump.ps1  index.html  package-lock.json  package.json  todo.md  tsconfig.json  vite.config.ts
logger_service/: Cargo.toml
logger_service/src/: main.rs
src-tauri/: .gitignore  Cargo.toml  build.rs  nsis-hooks.nsh  tauri.conf.json
src-tauri/.sqlx/: query-00eeef64b98a1a990285a6b32a1caf516908549f161a09ccadd18f12a09f5493.json  query-1334117d7b0001c0d98a4b613e39c4812e8c32479813140614182f56c47af54b.json  query-145b08e875118e68b46e5569462aee458884422b50b38755fbf7a83365d00718.json  query-1875e05570e789d6cd62a4867f8853d32e08afacbd82707d2644d6abb3068317.json  query-187ed55b5b189d6f3d7a700b24e3136697193481d923c0934589bc97f6df4a23.json  query-1fdaf5a93b3112b7b693e22380b62ca4a89bc0d0e3ced3d70fa2328c6118782b.json  query-20f4f929847f051ec72c5fcbb430ed49da6fb0af83a246106ca18103e12902e7.json  query-22db5aa61a3598168ddf3e1e1cb3374406d0db2243f9d88f9cd34c52356aadf5.json  query-2417342ea971188e50700b9b92e0d6e3908b968081ad30f59b8749b1561b6f81.json  query-24dea1ca4faddda912c1c2da9f0c7ff82eab864d6ea6ace6d6c12571f9a71ea7.json  query-28641e447df2a1bfeb875e39e3d70814c9880f6c0b2d7773012f2d46078f8fb2.json  query-2a830a749ed873de13c317e73dbdef89441e6583af2e5aec9829248fe14597da.json  query-2aa89030b4766fa63c02bebab257bdc40a16e99858115908701a05a91854c945.json  query-308e0d7c284fc193e7f6b7ec4dde9ba3b2511b624d0ad70b5639a60971570f27.json  query-328ee63737ccff8062ed1c43896d4ac0ec9b3579973b79248437dfe954c1fe60.json  query-329c8e141b7e715ca1dd0b948e203144eda299591823398c72257b1b79e92988.json  query-37753a09982d5748e0dfb0074f5b07626f5b69f5184bda604ed38dc366a8c297.json  query-3af965764e70297db31f31461eff3006e41b098fe782b5f905310d3787425b58.json  query-3b5d1dcc0a6ebf1b13ccc3b851399e6838050836a74cd176cad5fd6500d5044b.json  query-46b0b68edc83b80ecc543a62b93a27fc623f74a140d52d9febae5e93eee7175e.json  query-4efe2e503411182ec898c853763f3059aa36229cced7daffc7112d38f2315692.json  query-50c7aa9343e5b8405b7dc3aaa12d29274bad242878e7a387a338b5460b9f40df.json  query-51e13835695d78388ce27eff58e270ed599cee3a365d09c343fdb6dae99b394d.json  query-553358810a136c537c72d48a7452e3af3a711f67a4631c9ae6a3aa070111397d.json  query-5931ec736b6108442daaffdb3b78162f67f52ec768184364e8f90db51511dbef.json  query-5a17349e6acf506176a8aecab7ca2dc161a20693e8d6765b615f9628df3fdb30.json  query-60de6de3ccfeb77c060a4ac831d27090344dbc6b8b44f501080e20fb41d3cbf6.json  query-6a159a109096a8c51bb96f087c2da66d90193b76cec9086e05825840550adc74.json  query-6a493f0ec4551b83b38ccaa30bb1806d5347d6c48e8a9a112b87ab5449dd99c7.json  query-6b5484deb413b4349596e47f6378690b389cf6bd276240bd30eaa79ee77b33f0.json  query-76a449b0b6045bd8d308a84063c90f90b27790a1d9084aa775b58bab02ffc850.json  query-7e14564063b7cbab52c0228304248e5aea5a0ee2d511af4fbef2dd307792c026.json  query-80b4ac9c32220ea66336c8d5933be5708835f91909828bfdfb29d472a4916ea0.json  query-855072f863250e853b71ff2b3257d86d5510a212da20315df34d9ae0394ed22e.json  query-8571e88de1d88b9a1a3a00940ca26af04bb91bc504937b3eed1eea1bb0abf024.json  query-862c271a09143547634cec9b2748a87b6e24cb52f25580b3e69661903c2e86e7.json  query-8742902c91d80413c6f11ac93aab10bd7ced1d258932eb1adac29b7495352201.json  query-8df436d3bfa41e541321879d31f7fdaf820f89ddc31bba60f839c2e3eb6aaec8.json  query-930ebece18b7468d7b1d4f81075f21d0f948a71cabea6ad60318e5117e5e6b66.json  query-93ca008f3e84f6304797a15fbd0c4faf236277faeeb2a2921f5f4b569bb81c1a.json  (+34 more)
src-tauri/bundle-scripts/: deb-postinst.sh  deb-postrm.sh  time-tracker-autostart.desktop
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_app_metadata.sql  0003_hidden_category.sql  0004_stats_indexes.sql  0005_category_alter.sql  0005_enabled_feilds_on_category.sql  0006_category_is_collapsed.sql
src-tauri/src/: api.rs  app_prefs.rs  commands.rs  core.rs  db.rs  google_oauth.rs  lib.rs  log.rs  main.rs  tray.rs
src-tauri/src/db/: backup.rs  cat_regex.rs  category.rs  error.rs  log.rs  mod.rs  pool.rs  validation.rs
src-tauri/src/db/queries/: mod.rs  statistics.rs  week.rs
src-tauri/src/db/tables/: app_metadata_kv.rs  cat_regex.rs  category.rs  google_calendar.rs  google_calendar_sync.rs  (+4 more)
(+90 files in other folders)
