[package]
name = "time-tracker"
version = "0.1.0"
description = "A Auto Time Tracking App For Windows"
authors = ["Tariq Sekhri"]
edition = "2021"

[lib]
name = "time_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "chrono"
] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["clock"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus"
] }

[features]
dev-warnings = []
