[package]
name = "time-tracker"
version = "0.1.0"
description = "A Cross-Platform Auto Time Tracking App"
authors = ["Tariq Sekhri"]
edition = "2021"

[lib]
name = "time_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "chrono"
] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["clock"] }
regex = "1"
thiserror = "2.0.16"

# Platform-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Security",
    "Win32_System_WindowsProgramming"
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2", features = ["xlib"] }
libc = "0.2"
[features]
dev-warnings = []
