[package]
name = "time-tracker"
version = "1.9.1"
description = "A Windows Auto Time Tracking App"
authors = ["Tariq Sekhri"]
edition = "2021"

[lib]
name = "time_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "migrate",
    "chrono"
] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["clock"] }
regex = "1"
anyhow = "1"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
reqwest = { version = "0.12", features = ["json"] }
oauth2 = "4.4"
axum = "0.7"
url = "2.5"
urlencoding = "2.1"
dotenv = "0.15"
dirs = "6"

# Platform-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Security",
    "Win32_System_WindowsProgramming"
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
atspi = { version = "0.29", features = ["connection", "proxies", "zbus"] }
[features]
dev-warnings = []
